--- a/app/views/home/_projects.html.erb
+++ b/app/views/home/_projects.html.erb
@@ -3,8 +3,8 @@
   <%= link_to image_tag("chess.png", alt: "chess ruby; coding project"), "https://github.com/timothy-taylor/chess_ruby", height: "128px", width: "128px", class: "project" %>
   <%= link_to image_tag("memorygame.png", alt: "haiku memory game"), "https://timothy-taylor.github.io/odin_memorygame_react/", height: "128px", width: "128px", class: "project" %>
   <%= link_to image_tag("weather.png", alt: "weather terminal"), "https://timothy-taylor.github.io/weather_terminal/", height: "128px", width: "128px", class: "project" %>
-  <%= link_to image_tag("pacebook.png", alt: "pacebook; runners' connection"), "https://odin-pacebook-rails.herokuapp.com/", height: "128px", width: "128px", class: "project" %>
-  <%= link_to image_tag("todo.png", alt: "todo app in vanilla javascript"), "https://timothy-taylor.github.io/todolist_js/", height: "128px", width: "128px", class: "project" %>
+  <%= link_to image_tag("pacebook.png", alt: "pacebook: runners' connection"), "https://odin-pacebook-rails.herokuapp.com/", height: "128px", width: "128px", class: "project" %>
+  <%= link_to image_tag("offworld.png", alt: "offworld: interactive granular synth"), "https://timothy-taylor.github.io/offworld", height: "128px", width: "128px", class: "project" %>
   <%= link_to image_tag("raft2.png", alt: "raft; a delay for monome norns"), "https://github.com/timothy-taylor/raft", height: "128px", width: "128px", class: "project" %>
   <%= link_to image_tag("tictactoe.png", alt: "tictactoe on next.js"), "https://tictactoe-js.vercel.app", height: "128px", width: "128px", class: "project" %>
   <%= link_to image_tag("circularbuffer.png", alt: "circular buffer in rust"), "https://gist.github.com/timothy-taylor/1e9bab14fb645c449d3f5ffa930c09e4", height: "128px", width: "128px", class: "project" %>
