added new project

--- a/app/views/home/_projects.html.erb
+++ b/app/views/home/_projects.html.erb
@@ -10,7 +10,7 @@
   <%= link_to image_tag("circularbuffer.png", alt: "circular buffer in rust"), "https://gist.github.com/timothy-taylor/1e9bab14fb645c449d3f5ffa930c09e4", height: "128px", width: "128px", class: "project" %>
   <%= link_to image_tag("tally.png", alt: "tally pomodoro/tracker"), "https://github.com/timothy-taylor/tally", height: "128px", width: "128px", class: "project" %> 
   <%= link_to image_tag("battleship.png", alt: "battleship tdd js project"), "https://timothy-taylor.github.io/odin_battleship_js/", height: "128px", width: "128px", class: "project" %>
-  <%= link_to image_tag("javascript.png", alt: "javascript/webpacker website assignment"), "https://timothy-taylor.github.io/odin_restaurant_js/", height: "128px", width: "128px", class: "project" %>
+  <%= link_to image_tag("skateshop.png", alt: "shopping cart project"), "https://timothy-taylor.github.io/odin_shoppingcart_react/", height: "128px", width: "128px", class: "project" %>
   <%= link_to image_tag("drifts.png", alt: "drifts; generative poem"), drifts_path, height: "128px", width: "128px", class: "project" %>
   <%= link_to image_tag("cv.png", alt: "cv app in react"), "https://timothy-taylor.github.io/odin_cv_react/", height: "128px", width: "128px", class: "project" %>
   <%= link_to image_tag("recursive.png", alt: "generative art"), dsp_path, height: "128px", width: "128px", class: "project" %>
