updated tech and tally

--- a/app/views/home/_tally.html.erb
+++ b/app/views/home/_tally.html.erb
@@ -2,16 +2,23 @@
   <h2 class="subtitle has-text-left">mental tally:</h2>
   <ul>
     <h3 class="subtitle is-6 is-italic">since December 6 2021</h3>
-    <h3 class="subtitle is-6 is-italic">updated January 17 2022</h3>
-    <li>Javascript: 45.6%</li>
-    <li>Ruby: 19.4%</li>
-    <li>Design: 13.6%</li>
-    <li>Meditate: 4.9%</li>
-    <li>Journal: 4.9%</li>
-    <li>Music: 3.9%</li>
-    <li>Learning: 3.9%</li>
-    <li>Website: 2.9%</li>
-    <li>Chess: 1.0%</li>
+    <h3 class="subtitle is-6 is-italic">updated January 24 2022</h3>
+    <div class="columns">
+      <div class="column">
+        <li>Javascript: 40.9%</li>
+        <li>Ruby: 17.4%</li>
+        <li>Design: 14.8%</li>
+        <li>Meditate: 5.2%</li>
+        <li>Music: 5.2%</li>
+      </div>
+      <div class="column">
+        <li>Journal: 4.3%</li>
+        <li>Learning: 4.3%</li>
+        <li>Monome: 3.5%</li>
+        <li>Website: 3.5%</li>
+        <li>Chess: 0.9%</li>
+      </div>
+    </div>
   </ul>
 </section>
 
