--- a/app/views/home/_tech.html.erb
+++ b/app/views/home/_tech.html.erb
@@ -1,15 +1,10 @@
 <section class="content py-5 box">
   <h1 class="subtitle has-text-left">tech:</h1>
   <ul>
-    <li>
-      <strong>Ruby, Ruby on Rails, Javascript, React, webpack, git, Postgres</strong> - <em>The Odin Project Ruby on Rails program</em>
-    </li>
-    <li>
-      <strong>C</strong> - <em>edX 'C Programming in Linux' program, Learn C the Hard Way / Shaw</em>
-    </li>
-    <li>
-      <strong>vim, Rust, HTML, CSS, Lua, Jekyll, Next.js, Bulma, TailwindCSS</strong> - <em>selftaught</em>
-    </li>
+    <li><strong>Ruby</strong> <em>(+ Rails, Jekyll)</em></li>
+    <li><strong>Javascript</strong> <em>(+ React, Next.JS, webpack)</em></li>
+    <li><strong>HTML5</strong>, <strong>CSS3</strong> <em>(+ Tailwind, Bulma)</em></li>
+    <li><em>Postgres, Heroku, vim, git, bash/zsh, Rust, C, Lua</em></li>
   </ul>
 </section>
 
