updated projects, added cert

--- a/app/views/home/_projects.html.erb
+++ b/app/views/home/_projects.html.erb
@@ -1,7 +1,7 @@
 <section class="content has-text-right has-text-centered-mobile">
   <h1 class="title has-text-left">projects:</h1>
   <%= link_to image_tag("chess.png", alt: "chess ruby; coding project"), "https://github.com/timothy-taylor/chess_ruby", height: "128px", width: "128px", class: "project" %>
-  <%= link_to image_tag("memorygame.png", alt: "haiku memory game"), "https://timothy-taylor.github.io/odin_memorygame_react/", height: "128px", width: "128px", class: "project" %>
+  <%= link_to image_tag("constellations.png", alt: "constellations; sequencer for monome norns"), "https://github.com/timothy-taylor/constellations/", height: "128px", width: "128px", class: "project" %>
   <%= link_to image_tag("weather.png", alt: "weather terminal"), "https://timothy-taylor.github.io/weather_terminal/", height: "128px", width: "128px", class: "project" %>
   <%= link_to image_tag("pacebook.png", alt: "pacebook: runners' connection"), "https://odin-pacebook-rails.herokuapp.com/", height: "128px", width: "128px", class: "project" %>
   <%= link_to image_tag("offworld.png", alt: "offworld: interactive granular synth"), "https://timothy-taylor.github.io/offworld", height: "128px", width: "128px", class: "project" %>
