--- a/app/views/home/_tech.html.erb
+++ b/app/views/home/_tech.html.erb
@@ -5,6 +5,6 @@
     <li><strong>Javascript</strong> <em>(+ React, Next.JS, webpack)</em></li>
     <li><strong>HTML5</strong>, <strong>CSS3</strong> <em>(+ Tailwind, Bulma)</em></li>
     <li><em>Postgres, Heroku, vim, git, bash/zsh, Rust, C, Lua</em></li>
+    <li><a href="https://www.freecodecamp.org/certification/fcc331a94c2-5f0c-4129-b6c1-20ba2f271d63/responsive-web-design" target="_blank" class="has-text-danger">Responsive Web Design Certification</a></li>
   </ul>
 </section>
-
