updated modal event listeners, added certificate

--- a/app/views/home/_projects.html.erb
+++ b/app/views/home/_projects.html.erb
@@ -2,7 +2,7 @@
   <h1 class="title has-text-left">projects:</h1>
   <h2 class="subtitle is-7">click a project for more info</h2>
   <span>
-    <%= image_tag("chess.png", size: "128x128", alt: "chess ruby; coding project", class: "project js-modal-trigger", data: { target: "chess_ruby" }) %>
+    <%= image_tag("chess.png", size: "128x128", alt: "chess ruby; coding project", class: "project js-modal-trigger is-clickable", data: { target: "chess_ruby" }) %>
     <div id="chess_ruby" class="modal">
       <div class="modal-background"></div>
       <div class="modal-content">
@@ -18,7 +18,7 @@
   </span>
 
   <span>
-    <%= image_tag("constellations.png", size: "128x128", alt: "constellations; sequencer for monome norns", class: "project js-modal-trigger", data: { target: "constellations" }) %>
+    <%= image_tag("constellations.png", size: "128x128", alt: "constellations; sequencer for monome norns", class: "project js-modal-trigger is-clickable", data: { target: "constellations" }) %>
     <div id="constellations" class="modal">
       <div class="modal-background"></div>
       <div class="modal-content">
@@ -34,7 +34,7 @@
   </span>
 
   <span>
-    <%= image_tag("weather.png", size: "128x128", alt: "weather terminal in js", class: "project js-modal-trigger", data: { target: "weather_terminal" }) %>
+    <%= image_tag("weather.png", size: "128x128", alt: "weather terminal in js", class: "project js-modal-trigger is-clickable", data: { target: "weather_terminal" }) %>
     <div id="weather_terminal" class="modal">
       <div class="modal-background"></div>
       <div class="modal-content">
@@ -50,7 +50,7 @@
   </span>
   
  <span>
-    <%= image_tag("pacebook.png", size: "128x128", alt: "pacebook: facebook clone", class: "project js-modal-trigger", data: { target: "pacebook" }) %>
+    <%= image_tag("pacebook.png", size: "128x128", alt: "pacebook: facebook clone", class: "project js-modal-trigger is-clickable", data: { target: "pacebook" }) %>
     <div id="pacebook" class="modal">
       <div class="modal-background"></div>
       <div class="modal-content">
@@ -66,7 +66,7 @@
  </span>
 
  <span>
-    <%= image_tag("offworld.png", size: "128x128", alt: "offworld: interactive granular synth", class: "project js-modal-trigger", data: { target: "offworld" }) %>
+    <%= image_tag("offworld.png", size: "128x128", alt: "offworld: interactive granular synth", class: "project js-modal-trigger is-clickable", data: { target: "offworld" }) %>
     <div id="offworld" class="modal">
       <div class="modal-background"></div>
       <div class="modal-content">
@@ -81,7 +81,7 @@
  </span>
 
  <span>
-    <%= image_tag("raft2.png", size: "128x128", alt: "raft; a delay for monome norns", class: "project js-modal-trigger", data: { target: "raft" }) %>
+    <%= image_tag("raft2.png", size: "128x128", alt: "raft; a delay for monome norns", class: "project js-modal-trigger is-clickable", data: { target: "raft" }) %>
     <div id="raft" class="modal">
       <div class="modal-background"></div>
       <div class="modal-content">
@@ -97,7 +97,7 @@
  </span>
 
  <span>
-    <%= image_tag("tictactoe.png", size: "128x128", alt: "tictactoe on next.js", class: "project js-modal-trigger", data: { target: "tictactoe" }) %>
+    <%= image_tag("tictactoe.png", size: "128x128", alt: "tictactoe on next.js", class: "project js-modal-trigger is-clickable", data: { target: "tictactoe" }) %>
     <div id="tictactoe" class="modal">
       <div class="modal-background"></div>
       <div class="modal-content">
@@ -113,7 +113,7 @@
  </span>
 
  <span>
-    <%= image_tag("circularbuffer.png", size: "128x128", alt: "circular buffer in rust", class: "project js-modal-trigger", data: { target: "circularbuffer" }) %>
+    <%= image_tag("circularbuffer.png", size: "128x128", alt: "circular buffer in rust", class: "project js-modal-trigger is-clickable", data: { target: "circularbuffer" }) %>
     <div id="circularbuffer" class="modal">
       <div class="modal-background"></div>
       <div class="modal-content">
@@ -129,7 +129,7 @@
   </span>
 
  <span>
-    <%= image_tag("battleship.png", size: "128x128", alt: "battleship tdd js project", class: "project js-modal-trigger", data: { target: "battleship" }) %>
+    <%= image_tag("battleship.png", size: "128x128", alt: "battleship tdd js project", class: "project js-modal-trigger is-clickable", data: { target: "battleship" }) %>
     <div id="battleship" class="modal">
       <div class="modal-background"></div>
       <div class="modal-content">
@@ -145,7 +145,7 @@
  </span>
 
  <span>
-   <%= image_tag("tally.png", size: "128x128", alt: "tally pomodoro/tracker", class: "project js-modal-trigger", data: { target: "tally" }) %>
+   <%= image_tag("tally.png", size: "128x128", alt: "tally pomodoro/tracker", class: "project js-modal-trigger is-clickable", data: { target: "tally" }) %>
     <div id="tally" class="modal">
       <div class="modal-background"></div>
       <div class="modal-content">
@@ -161,7 +161,7 @@
  </span>
 
  <span>
-   <%= image_tag("skateshop.png", size: "128x128", alt: "shopping cart project", class: "project js-modal-trigger", data: { target: "skateshop" }) %>
+   <%= image_tag("skateshop.png", size: "128x128", alt: "shopping cart project", class: "project js-modal-trigger is-clickable", data: { target: "skateshop" }) %>
     <div id="skateshop" class="modal">
       <div class="modal-background"></div>
       <div class="modal-content">
@@ -177,7 +177,7 @@
   </span>
 
  <span>
-   <%= image_tag("drifts.png", size: "128x128", alt: "drifts; generative poem", class: "project js-modal-trigger", data: { target: "drifts" }) %>
+   <%= image_tag("drifts.png", size: "128x128", alt: "drifts; generative poem", class: "project js-modal-trigger is-clickable", data: { target: "drifts" }) %>
     <div id="drifts" class="modal">
       <div class="modal-background"></div>
       <div class="modal-content">
@@ -193,7 +193,7 @@
  </span>
 
  <span>
-   <%= image_tag("cv.png", size: "128x128", alt: "cv app in react", class: "project js-modal-trigger", data: { target: "cv" }) %>
+   <%= image_tag("cv.png", size: "128x128", alt: "cv app in react", class: "project js-modal-trigger is-clickable", data: { target: "cv" }) %>
    <div id="cv" class="modal">
       <div class="modal-background"></div>
       <div class="modal-content">
@@ -209,7 +209,7 @@
  </span>
 
  <span>
-   <%= image_tag("recursive.png", size: "128x128", alt: "generative art", class: "project js-modal-trigger", data: { target: "dsp" }) %>
+   <%= image_tag("recursive.png", size: "128x128", alt: "generative art", class: "project js-modal-trigger is-clickable", data: { target: "dsp" }) %>
    <div id="dsp" class="modal">
       <div class="modal-background"></div>
       <div class="modal-content">
